add initial blog and post

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# -*- mode: gitignore; -*-
+
 /public/
 /resources/_gen/
 /assets/jsconfig.json
@@ -8,3 +10,51 @@ node_modules/
 
 content/*
 !content/.gitkeep
+
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# Org-mode
+.org-id-locations
+*_archive
+
+# flymake-mode
+*_flymake.*
+
+# eshell files
+/eshell/history
+/eshell/lastdir
+
+# elpa packages
+/elpa/
+
+# reftex files
+*.rel
+
+# AUCTeX auto folder
+/auto/
+
+# cask packages
+.cask/
+dist/
+
+# Flycheck
+flycheck_*.el
+
+# server auth directory
+/server/
+
+# projectiles files
+.projectile
+
+# directory configuration
+.dir-locals.el
+
+# network security
+/network-security.data
