--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -25,6 +25,9 @@ jobs:
       with:
         version: 26.3
 
+    - name: Emacs dir setup
+      run: mkdir -p ~/.emacs.d/.org-id-locations
+
     - name: Export Posts Org file to Markdown
       run: emacs ./post/*.org --batch -L ../tomelr -L ../ox-hugo -l ox-hugo.el --eval='(org-hugo-export-wim-to-md t)' --kill
 
