make org id locations a file

--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -26,7 +26,7 @@ jobs:
         version: 26.3
 
     - name: Emacs dir setup
-      run: mkdir -p ~/.emacs.d/.org-id-locations
+      run: mkdir -p ~/.emacs.d/ && touch ~/.emacs.d/.org-id-locations
 
     - name: Export Posts Org file to Markdown
       run: emacs ./post/*.org --batch -L ../tomelr -L ../ox-hugo -l ox-hugo.el --eval='(org-hugo-export-wim-to-md t)' --kill
