--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -40,7 +40,7 @@ jobs:
         hugo-version: '0.119.0'
 
     - name: Build
-      run: hugo --minify --theme=hermit
+      run: hugo --minify --theme=researcher
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
