--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -32,9 +32,9 @@ jobs:
       run: emacs ./post/*.org --batch -L ../tomelr -L ../ox-hugo -l ox-hugo.el --eval='(org-hugo-export-wim-to-md t)' --kill
 
     - name: Export Misc Org file to Markdown
-      run: emacs ./post/*.org --batch -L ../tomelr -L ../ox-hugo -l ox-hugo.el --eval='(org-hugo-export-wim-to-md t)' --kill
+      run: emacs ./misc/*.org --batch -L ../tomelr -L ../ox-hugo -l ox-hugo.el --eval='(org-hugo-export-wim-to-md t)' --kill
 
-    - name: Export Misc Org file to Markdown
+    - name: create index
       run: cp ./content/misc/about.md ./content/_index.md
 
     - name: Setup Hugo
