--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -46,6 +46,7 @@ jobs:
       uses: peaceiris/actions-hugo@v2
       with:
         hugo-version: '0.119.0'
+        extended: true
 
     - name: Build
       run: hugo --minify --theme=researcher
