--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -54,6 +54,9 @@ jobs:
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       if: github.ref == 'refs/heads/main'
+      permissions:
+        contents: write
+        pages: write
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./public
