--- a/config.toml
+++ b/config.toml
@@ -57,6 +57,14 @@ copyright = "Released under the MIT license."
     title = ""
     url = ""     
   [[params.socialIcons]]
+    icon = "fab fa-strava"
+    title = "Strava"
+    url = "https://www.strava.com/athletes/33789621"
+  [[params.socialIcons]]
+    icon = ""
+    title = ""
+    url = ""     
+  [[params.socialIcons]]
     icon = "fas fa-envelope"
     title = "E-mail"
     url = "mailto:mkusper@bydlosoft.com"   
