--- a/config.toml
+++ b/config.toml
@@ -59,7 +59,7 @@ copyright = "Released under the MIT license."
   [[params.socialIcons]]
     icon = "fab fa-strava"
     title = "Strava"
-    url = "https://www.strava.com/athletes/33789621"
+    url = "https://www.strava.com/athletes/mkusper"
   [[params.socialIcons]]
     icon = ""
     title = ""
