--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -43,8 +43,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+
       - name: Clone Org-mode exporter
-        run: git clone https://github.com/kaushalmodi/ox-hugo.git ox-hugo
+        run:     git clone --depth 1 --branch 0.12.2 https://github.com/kaushalmodi/ox-hugo.git ox-hugo
 
       - name: Clone tomelr
         run: git clone https://github.com/kaushalmodi/tomelr.git tomelr
